# motion_removal

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: motion_removal.rviz  params.yaml
include/motion_removal/: motion_removal.hpp  ros_opencv.hpp
src/: main.cpp  motion_removal.cpp  optical_flow_test.cpp  ros_opencv.cpp
src/tests/: homography_test.cpp  homography_test_image.cpp  homography_test_image.py  optical_flow_test.cpp  reprojection_test.cpp  reprojection_test_image.cpp  sparce.py  sparce_test.cpp  tum_recorder.cpp  uns.py
